feat: downgrade do Java 11